cmake_minimum_required(VERSION 3.12)
project(clion01)

set(CMAKE_CXX_STANDARD 14)

add_executable(main main.cpp)
add_executable(2.2_carrot 2.2_carrot.cpp)
add_executable(2.3_getinfo 2.3_getinfo.cpp)
add_executable(2.4_sqrt 2.4_sqrt.cpp)
add_executable(2.5_ourfunc 2.5_ourfunc.cpp)
add_executable(2.6_convert 2.6_convert.cpp)

add_executable(2.6_exercise 2.6_exercise.cpp)
add_executable(3.1_limits 3.1_limits.cpp)
add_executable(3.2_exceed 3.2_exceed.cpp)
add_executable(3.3_hexoct 3.3_hexoct.cpp)
add_executable(3.5_chartype 3.5_chartype.cpp)
add_executable(3.6_morechar 3.6_morechar.cpp)
add_executable(3.7_bondini 3.7_bondini.cpp)